syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/sarastee/auth/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth API"
    version: "1.0.0"
    contact: {
      name: "Ilya Lyakhov"
      email: "ilja.sarasti@mail.ru"
    };
  }

  host: "localhost:8081",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {
  // Creates new user
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1"
      body: "*"
    };
  }

  // Gets user by ID
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }

  // Updates user
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  }

  // Deletes user by ID
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message CreateRequest {
  // User name
  string name = 1 [(validate.rules).string = {min_len:1, max_len: 100}];
  // User email
  string email = 2 [(validate.rules).string.email = true];
  // User password
  string password = 3 [(validate.rules).string = {min_len:1, max_len: 100}];
  // User password confirm
  string password_confirm = 4 [(validate.rules).string = {min_len:1, max_len: 100}];
  // User role
  Role role = 5;
}

message CreateResponse {
  // User ID
  int64 id = 1;
}

message GetRequest {
  // User ID
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetResponse {
  // User ID
  int64 id = 1;
  // User name
  string name = 2;
  // User email
  string email = 3;
  // User role
  Role role = 4;
  // Create time
  google.protobuf.Timestamp created_at = 5;
  // Update time
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  // User ID
  int64 id = 1 [(validate.rules).int64.gt = 0];
  // User Name
  optional string name = 2 [(validate.rules).string = {min_len:1, max_len: 100}];
  // User email
  optional string email = 3 [(validate.rules).string.email = true];
  // User role
  optional Role role = 4;
}

message DeleteRequest {
  // User ID
  int64 id = 1;
}